public/default.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    overflow-y: auto;
    display: flex;
    align-items: center;
    justify-content: center;
}

li, a, button {
    font-family: "Montserrat", sans-serif;
    font-weight: 500;
    font-size: 16px;
    color: #edf0f1;
    text-decoration: none;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 30px 10%;
    float: left;
}

.logo {
    cursor: pointer;
}

.nav_links {
    list-style: none;
}

.nav_links li {
    display: inline-block;
    padding: 0px 20px;
}

.nav_links li a {
    transition: all 0.3s ease 0s;

}

.nav_links li a:hover {
    color: #0088a9
}

button {
    padding: 9px 25px;
    background-color: rgba(0, 136, 169, 1);
    border: none;
    border-radius: 50px;
    cursor: pointer;
    transition: all 0.3s ease 0s;
}

button:hover {
    background-color: rgba(0, 136, 169, 0.8);
}

#gameBoard {
    width: 500px;
    float: left;
}

